--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "vscode-rust-extension-pack",
   "displayName": "Rust Extension Pack",
   "description": "Popular VSCode extensions for Rust development.",
-  "version": "0.2.0",
+  "version": "1.0.0",
   "publisher": "franneck94",
   "engines": {
-    "vscode": "^1.66.0"
+    "vscode": "^1.83.0"
   },
   "icon": "logo.png",
   "galleryBanner": {
@@ -26,7 +26,7 @@
     "url": "https://github.com/franneck94/vscode-rust-extension-pack/issues"
   },
   "extensionPack": [
-    "matklad.rust-analyzer",
+    "rust-lang.rust-analyzer",
     "serayuzgur.crates",
     "vadimcn.vscode-lldb",
     "tamasfe.even-better-toml",
